# helfffen

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Procfile  README.md  captain-definition  commitlint.config.js  manage.py  requirements.txt
.github/workflows/: build-container-image.yml  container-image-on-tag.yml
helfffen/: asgi.py  production.py  settings.py  settings_caprover.py  settings_dev.py  urls.py  wsgi.py
helfffencore/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
helfffencore/migrations/: 0001_initial.py  0002_auto_20210217_2151.py  0003_task_deadline.py  0004_task_created_at.py
src/: .dockerignore  .flake8  Dockerfile  Dockerfile.dev  example.env  manage.py  pyproject.toml
src/helfffen/: settings.py  urls.py  wsgi.py
src/helfffencore/: admin.py  forms.py  urls.py  views.py
src/helfffencore/migrations/: 0001_initial.py  0004_task_created_at.py  0005_auto_20210217_2350.py  0006_auto_20210218_0050.py
src/helfffencore/static/helfffencore/css/: bulma.css  bulma.css.map
src/helfffencore/static/helfffencore/js/: clipboard.js
src/helfffencore/templates/: base.html  navbar.html  task_list.html  task_show.html
src/helfffencore/templates/tasks/: _task_card.html
templates/helfffencore/: base.html  navbar.html  task_list.html  task_show.html
templates/helfffencore/tasks/: _task_card.html
utils/: run.sh
